language/move-lang/tests/move_check/parser/number_literal_too_long_u8.move
module M {
    fun long_u8() {
	255u8;
	256u8;
    }
}
